More crate metadata.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "alert-after"
 version = "0.1.0"
 authors = ["Corey Farwell <coreyf@rwell.org>"]
 license = "MIT/Apache-2.0"
+description = "Get a desktop notification after a command finishes executing"
+repository = "https://github.com/frewsxcv/alert-after"
 
 [[bin]]
 name = "aa"
